--- a/armarios-style.css
+++ b/armarios-style.css
@@ -12,14 +12,31 @@ Tudo que está neste bloco é da linguagem css
 Define margem de 0px a todas caixas 
 */
 header {
-    text-align: center;
     background-color: #04284a;
     color: rgb(239, 238, 255);
-    width:100% ;
+    width: 100%;
     height: 100px;
     display: flex;
-    align-items: center;
+    text-align: center;
 }
+
+header div {
+    padding: 10px;
+}
+
+#logo {
+    width: 0.01%;
+}
+
+#logo img{
+    height: 75px;
+    margin-left: 10px;
+}
+
+#lj {
+    width: 99.99%;
+}
+
 h3 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -70,8 +87,9 @@ main div button {
 
 }
 
-main div button:hover{
+button:hover{
             background-color: #044a0e;
+            border: solid black 2px ;
 }
 
 footer {
