--- a/index-style.css
+++ b/index-style.css
@@ -32,6 +32,7 @@ header div {
     height: 75px;
     margin-left: 10px;
 }
+
 #lj {
     width: 99.99%;
 }
@@ -42,6 +43,7 @@ h3 {
 }
 
 p {
+    margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
@@ -108,15 +110,20 @@ main div {
 
 main div button a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 main div img {
     height: 300px;
     width: 50%;
 }
+button{
+    margin-top: 10px;
+    text-decoration: none;
+    background-color: #04284a;
+    border: solid white 2px;
 
-
+}
 footer {
     background-color: #04284a;
     color: rgb(239, 238, 255);
