--- a/assets/index-style.css
+++ b/assets/index-style.css
@@ -82,23 +82,26 @@ nav div a:hover {
 main {
     background-color: rgb(239, 238, 255);
     width: 80%;
-    height: 1000px;
+    height: auto;
     background-color: #04284a;
-    display: flex;
     flex-direction: row;
-
 }
 
-main div {
+
+.div1 {
+    display: flex;
+    height: auto;
+}
+
+.produto {
     flex: 1;
     margin-top: 40px;
     text-align: center;
     animation-name: div;
     animation-duration: 1.7s;
     position: relative;
-    
+    box-sizing: border-box;
 }
-
 @keyframes div {
     0%{
        opacity: 0%;
@@ -108,22 +111,23 @@ main div {
     }
 }
 
+main div img {
+    height: 300px;
+    width: 50%;
+}
+
 main div button a {
     text-decoration: none;
     color: white;
 }
 
-main div img {
-    height: 300px;
-    width: 50%;
-}
 button{
     margin-top: 10px;
     text-decoration: none;
     background-color: #04284a;
     border: solid white 2px;
-
 }
+
 footer {
     background-color: #04284a;
     color: rgb(239, 238, 255);
