--- a/assets/entrar.css
+++ b/assets/entrar.css
@@ -2,7 +2,6 @@
     width: 300px;
     margin: 0 auto;
     margin-top: 50px;
-    background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -23,11 +22,21 @@
 
 .container input[type="number"],
 .container input[type="text"] {
-    width: 100%;
+    width: 60%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     margin-bottom: 20px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 .container input[type="button"] {
