--- a/assets/entrar.css
+++ b/assets/entrar.css
@@ -13,9 +13,12 @@
     margin-bottom: 20px;
     width: 100px;
     height: 100px;
+    border-radius: 100%;
 }
 
 .container h2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
 }
