--- a/assets/armarios-style.css
+++ b/assets/armarios-style.css
@@ -1,4 +1,4 @@
-* {
+    * {
     margin: 0 auto;
 }
 
@@ -23,6 +23,39 @@ H5 {
 
 }
 
+@media only screen and (max-width: 600px) {
+    nav, header {
+        width: 100%;
+    }
+
+    header #lj h1 {
+        font-size: 41px;
+    }
+
+    header #lj  {
+        width: 65%
+    }
+    
+    header div {
+        flex-direction: row;
+    }
+
+    header #logo {
+        width: 35%
+    }
+
+    body nav {
+        height: 250px;
+    }
+
+    nav #menu-h {
+        flex-direction: column;
+    }
+
+    body main #elements {
+        flex-direction: column;
+    }
+}
 /*  
 Tudo que está neste bloco é da linguagem css
 
@@ -91,7 +124,7 @@ nav div a:hover {
 }
 
 main {
-    height: 18.1cm;
+    height: auto;
     width: 100%;
     background-color: #172838;
     text-align: center;
