--- a/assets/index-style.css
+++ b/assets/index-style.css
@@ -177,6 +177,7 @@ button{
     text-decoration: none;
     background-color: #04284a;
     border: solid white 2px;
+    color: white;
 }
 
 footer {
