--- a/assets/ARCHIVE.CSS
+++ b/assets/ARCHIVE.CSS
@@ -4,6 +4,8 @@
 
 body {
     background-color: #044a0e;
+    min-height: 100vh;
+
 }
 
 h1 {
@@ -15,7 +17,6 @@ header {
     background-color: #04284a;
     color: rgb(239, 238, 255);
     width: 100%;
-    height: 100px;
     display: flex;
     text-align: center;
 }
@@ -51,7 +52,6 @@ p {
 nav {
     background-color: #044a0e;
     width: 100%;
-    height: 47px;
     display: flex;
 
 }
@@ -82,7 +82,6 @@ nav div a:hover {
 main {
     background-color: rgb(239, 238, 255);
     width: 80%;
-    height: 1000px;
     background-color: #04284a;
     display: flex;
     flex-direction: row;
@@ -128,7 +127,6 @@ footer {
     background-color: #04284a;
     color: rgb(239, 238, 255);
     width: 80%;
-    height: 100px;
     display: flex;
     align-items: flex-end;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
